# nibrary

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh  build_baran.sh  build_dev.sh  build_linux.sh  build_mac.sh  build_win.bat  build_windows.bat
.github/workflows/: build_shared.yml  build_static.yml
cmake/: platform.cmake
scripts/: makeRelease.sh
src/: nibrary.h
src/anat/: anatSurf.h  fsAseg2CSFSurf.cpp  fsAseg2CerebellumSurf.cpp  fsAseg2CranSurf.cpp  fsAseg2SubcortexSurf.cpp  fsAseg2Surf.cpp  fsReconall2BrainSurf.cpp  fsReconall2CorticalSurf.cpp  fslFirst2BrainstemSurf.cpp  fslFirst2SubcortexSurf.cpp  wmSurf2wmLabel.cpp
src/anat/xact/: prepXact.cpp  prepXact.h
src/base/: byteSwapper.h  config.cpp  config.h  cudaHandler.cu  cudaHandler.cuh  dataTypeHandler.cpp  dataTypeHandler.h  fileOperations.cpp  fileOperations.h  multithreader.cpp  multithreader.h  nibr.cpp  stringOperations.cpp  stringOperations.h  vectorOperations.cpp  vectorOperations.h  verbose.cpp  verbose.h
src/cmake/: cuda.cmake
src/dMRI/gradient/: dMRI_grad.cpp  dMRI_grad.h
src/dMRI/imageTypes/: fod_image.cpp  fod_image.h  fod_image_discretizer.cpp
src/dMRI/reconstruction/transhi2015/: G_mat.cpp  optimizeDiso.cpp  peakCheck.cpp  preprocessing.cpp  printModel.cpp  recon_transhi2015.cpp  recon_transhi2015.h  setConstraints.cpp
src/dMRI/tractography/: tractogram.h  trekker.cpp  trekker.h
src/dMRI/tractography/algorithms/: tractographyAlgorithm.h
src/dMRI/tractography/algorithms/ptt/: algorithm_ptt.cpp  algorithm_ptt.h  algorithm_ptt_initialize.cpp  algorithm_ptt_params.cpp  algorithm_ptt_params.h  ptf.cpp  (+2 more)
src/dMRI/tractography/autoencoder/: StreamlinAutoencoder.cpp  StreamlineAutoencoder.h  autoEncoderUtils.h  decodeAndSave.cpp  decodeAndSave.h  encodeAndSave.cpp  encodeAndSave.h  streamlinAutoencoder.cpp  streamlineAutoencoder.cpp  streamlineAutoencoder.h  streamlineAutoencoder_aux.cpp  streamlineAutoencoder_aux.h  streamlineAutoencoder_enc_dec.h  utils.h
src/dMRI/tractography/connectivity/: tractogramConn_imageIndexer.cpp  tractogramConn_imageIndexer.h  tractogramConn_surfaceIndexer.cpp  tractogramConn_surfaceIndexer.h
src/dMRI/tractography/io/: tractogramField.cpp  tractogramField.h  tractogramReader.cpp  tractogramReader.h  tractogramWriter.cpp  tractogramWriter.h  tractogramWriter_tck.cpp  tractogramWriter_tck.h  tractogramWriter_tckWriter.cpp  tractogramWriter_tckWriter.h  tractogramWriter_trk.cpp  tractogramWriter_trk.h  tractogramWriter_trx.cpp  tractogramWriter_trx.h  tractogramWriter_vtk.cpp  tractogramWriter_vtkWriter.cpp  tractogramWriter_vtkWriter.h  tractogramWriter_vtk_ascii.cpp  tractogramWriter_vtk_ascii.h  tractogramWriter_vtk_binary.cpp  tractogramWriter_vtk_binary.h  tractogramWriter_vtpWriter.cpp  tractogramWriter_vtpWriter.h
src/dMRI/tractography/mappers/: gridder_4DECsegmentLength.h  gridder_4dMRIsim_stickZeppelinWM_GM_CSF.h  gridder_4mask.h  gridder_4segmentLength.h  gridder_4streamlineCount.h  gridder_4streamlineIdAndGaussianWeightedLength.h  gridder_4streamlineIdAndGaussianWeightedLength_disk.h  gridder_4streamlineIdAndGaussianWeightedLength_mem.h  gridder_4streamlineIdAndGaussianWeightedLength_memVector.h  gridder_4streamlineIdAndLength.h  tractogram2imageMapper.cpp  tractogram2imageMapper.h  tractogram2surfaceMapper.cpp  tractogram2surfaceMapper.h  tractogramMap_imageIndexer.h  tractogramMap_surfaceIndexer.cpp  tractogramMap_surfaceIndexer.h
src/dMRI/tractography/pathway/: checkSeed.cpp  checkWalker.cpp  createWalker.cpp  getSeedInd.cpp  isPointAtEdgeOfRule.cpp  isPointInsideRule.cpp  isSegmentEntering.cpp  isSegmentExiting.cpp  parseRule.cpp  parseRule.h  pathway.cpp  pathway.h  pathwayAdd.cpp  pathwayAddSurface.cpp  pathwayApplyAndLog.cpp  pathwayRemove.cpp  pathwayRule.h  pathwayVerifier.cpp  seededProcess.cpp  seedlessProcess.cpp  setEntryStatus.cpp  skipSeed.cpp  tieDiscardRules.cpp  tieFirstEnd.cpp  tieRequireRules.cpp  tieSecondEnd.cpp  walk.cpp  walkFirstEnd.cpp  walkSecondEnd.cpp  walker_aux.cpp
src/dMRI/tractography/seed/: seed.cpp  seed.h
src/dMRI/tractography/tracker/: tracker.cpp  tracker.h  trackerThread.cpp  trackerThread.h
src/dMRI/tractography/utility/: parallelStreamlineGenerator.cpp  parallelStreamlineGenerator.h  pathFilter.cpp  pathFilter.h  purifibre.cpp  purifibre.h  resampleStreamline.cpp  resampleStreamline.h  segmentOperators.cpp  segmentOperators.h  streamline_operators.cpp  streamline_operators.h  tractogram_operators.cpp  tractogram_operators.h
src/image/: image.cpp  image.h  imageCuda.cuh  image_aux.cpp  image_headerReader.cpp  image_marchingCubes.cpp  image_marchingCubes.h  image_math.h  image_morphological.h  image_operators.cpp  image_operators.h  image_operatorsCuda.cu  image_operatorsCuda.cuh  image_reader.cpp  image_transform.cpp  image_transform.h  image_writer.cpp  interpolation.h  interpolationCuda.cuh  orientation.cpp  orientation.h  sf_image.cpp  sf_image.h
src/math/: conn3D.cpp  conn3D.h  core.h  disc.h  gaussian.h  interp1D.h  pointCloud.cpp  pointCloud.h  randomThings.cpp  randomThings.h  rayTraceVoxel.cpp  reorient.cpp  reorient.h  rotation.h  sphere.h  sphericalFunctions.cpp  sphericalFunctions.h  sphericalHarmonics.cpp  sphericalHarmonics.h  sphericalHarmonics_aux.cpp  sphericalHarmonics_aux.h  triangle.h
src/math/PDE/: FDM.cpp
src/surface/: connectedComponents.cpp  distToPoint.cpp  findSegmentTriangleIntersection.cpp  findSegmentTriangleIntersection.h  intersectSegment.cpp  isClosed.cpp  isManifold.cpp  isPointInsideSurface.cpp  isSegmentInsideSurface.cpp  surface.cpp  surface.h  surface2imageMapper.cpp  surface2imageMapper.h  surface_field.cpp  surface_fieldReaders.cpp  surface_io.cpp  surface_make.cpp  surface_make.h  surface_operators.cpp  surface_operators.h  surface_operators_geogram.cpp
src/surface/shapes/: shapePrimitives.cpp  shapePrimitives.h  shapes.cpp  shapes.h
src/utility/seeder/: seedImage.cpp  seedImage.h  seedInsideSurface.cpp  seedInsideSurface.h  seedList.cpp  seedList.h  seedSphere.cpp  seedSphere.h  seedSurface.cpp  seedSurface.h  seeder.h
